Going back through the lessons and taking notes

--- a/responsive-web-design/responsive-web-design-projects/build-a-survey-form/index.html
+++ b/responsive-web-design/responsive-web-design-projects/build-a-survey-form/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Reflection</title>
-    <meta name="description" content="Tribute to B the Polar Bear">
+    <meta name="author" content="Marc LeBlanc">
+    <meta name="description" content="Reflection survey">
 
     <style>
         body {
@@ -12,9 +13,14 @@
             background-color: #242627;
             color: whitesmoke;
             font-family: 'Helvetica Neue', sans-serif;
+            font-size: large;
+            line-height: 1.4;
             margin: 100px;
             padding: 10px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 8px 0px rgba(0, 0, 0, 0.23);
+        }
+        main {
+            background-color: #242627;
         }
     </style>
 </head>
@@ -35,16 +41,16 @@
 
             <!-- Name -->
             <br>
-            <label for="name" id="name-label">Enter your name:</label>
+            <label for="name" id="name-label">Name</label>
             <br>
-            <input id="name" name="name" type="text" placeholder="Name" required>
+            <input id="name" name="name" type="text" placeholder="Enter your name" required>
             <br>
 
             <!-- Email -->
             <br>
-            <label for="email" id="email-label">Enter your email address:</label>
+            <label for="email" id="email-label">Email</label>
             <br>
-            <input id="email" name="email" type="email" placeholder="Email" required>
+            <input id="email" name="email" type="email" placeholder="Enter your email address" required>
             <br>
 
             <!-- Number -->
