Added more cards to show more content

--- a/responsive-web-design/notes/applied-visual-design.html
+++ b/responsive-web-design/notes/applied-visual-design.html
@@ -2,7 +2,7 @@
 <!-- !DOCTYPE html tells the browser that we're using HTML5 -->
 
 <!-- Start of the HTML code -->
-<html>
+<html lang="en">
 
 <head>
     <!-- Metadata elements go in the head -->
@@ -13,6 +13,7 @@
     <!-- Sets the page title, used to name the tab, and for Google search listings -->
     <title>Applied Visual Design</title>
 
+    <!-- In-file CSS code goes in in the style block -->
     <style>
         :root {
             /* Define colour variables globally, so they're available in any scope on the page */
@@ -186,50 +187,14 @@
     </header>
 
     <main>
+
         <!-- By nesting 3 layers of div elements, we can set CSS properties for each layer separately, to create a card look on the page -->
-        <div id="google" class="fullCard">
-            <div class="cardContent">
-                <div class="cardText">
-                    <h4>Google</h4>
-                    <p>Google was founded by Larry Page and Sergey Brin while they were Ph.D. students at
-                        <strong>Stanford
-                            University</strong>.
-                    </p>
-                </div>
-                <div class="cardLinks">
-                    <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank">Larry Page</a>
-                    <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank">Sergey Brin</a>
-                </div>
-            </div>
-        </div>
-        <div id="amazon" class="fullCard">
-            <div class="cardContent">
-                <div class="cardText">
-                    <h4>Amazon</h4>
-                    <p>Amazon was founded by Jeff Bezos.</p>
-                </div>
-                <div class="cardLinks">
-                    <a href="https://en.wikipedia.org/wiki/Jeff_Bezos" target="_blank">Jeff Bezos</a>
-                </div>
-            </div>
-        </div>
-        <div id="microsoft" class="fullCard">
-            <div class="cardContent">
-                <div class="cardText">
-                    <h4>Microsoft</h4>
-                    <p>Microsoft was founded by Bill Gates.
-                    </p>
-                </div>
-                <div class="cardLinks">
-                    <a href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Bill Gates</a>
-                </div>
-            </div>
-        </div>
         <div id="apple" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>Apple</h4>
-                    <p>Apple was founded by Steve Jobs and Steve Wozniak.
+                    <p>
+                        Apple was founded by Steve Jobs and Steve Wozniak.
                     </p>
                 </div>
                 <div class="cardLinks">
@@ -239,11 +204,96 @@
             </div>
         </div>
 
+        <div id="google" class="fullCard">
+            <div class="cardContent">
+                <div class="cardText">
+                    <h4>Google</h4>
+                    <p>
+                        Google was founded by Larry Page and Sergey Brin while they were Ph.D. students at Stanford
+                        University.
+                    </p>
+                </div>
+                <div class="cardLinks">
+                    <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank">Larry Page</a>
+                    <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank">Sergey Brin</a>
+                </div>
+            </div>
+        </div>
 
+        <div id="microsoft" class="fullCard">
+            <div class="cardContent">
+                <div class="cardText">
+                    <h4>Microsoft</h4>
+                    <p>
+                        Microsoft was founded by Bill Gates.
+                    </p>
+                </div>
+                <div class="cardLinks">
+                    <a href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Bill Gates</a>
+                </div>
+            </div>
+        </div>
 
+        <div id="dell" class="fullCard">
+            <div class="cardContent">
+                <div class="cardText">
+                    <h4>Dell</h4>
+                    <p>
+                        Dell was founded by Michael Dell.
+                    </p>
+                </div>
+                <div class="cardLinks">
+                    <a href="https://en.wikipedia.org/wiki/Michael_Dell" target="_blank">Michael Dell</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="ibm" class="fullCard">
+            <div class="cardContent">
+                <div class="cardText">
+                    <h4>IBM</h4>
+                    <p>
+                        IBM was founded by Charles Ranlett Flint.
+                    </p>
+                </div>
+                <div class="cardLinks">
+                    <a href="https://en.wikipedia.org/wiki/Charles_Ranlett_Flint" target="_blank">Charles Ranlett
+                        Flint</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="intel" class="fullCard">
+            <div class="cardContent">
+                <div class="cardText">
+                    <h4>Intel</h4>
+                    <p>
+                        Intel was founded by Gordon Moore and Robert Noyce.
+                    </p>
+                </div>
+                <div class="cardLinks">
+                    <a href="https://en.wikipedia.org/wiki/Gordon_Moore" target="_blank">Gordon Moore</a>
+                    <a href="https://en.wikipedia.org/wiki/Robert_Noyce" target="_blank">Robert Noyce</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="hp" class="fullCard">
+            <div class="cardContent">
+                <div class="cardText">
+                    <h4>HP</h4>
+                    <p>
+                        HP was founded by Bill Hewlett and David Packard.
+                    </p>
+                </div>
+                <div class="cardLinks">
+                    <a href="https://en.wikipedia.org/wiki/Bill_Hewlett" target="_blank">Bill Hewlett</a>
+                    <a href="https://en.wikipedia.org/wiki/David_Packard" target="_blank">David Packard</a>
+                </div>
+            </div>
+        </div>
 
     </main>
-
 
     <footer>
         Footer
