Using <section> for each card for accessibility

--- a/responsive-web-design/notes/applied-visual-design.html
+++ b/responsive-web-design/notes/applied-visual-design.html
@@ -8,7 +8,7 @@
     <!-- Metadata elements go in the head -->
 
     <!-- Refresh the browser to load file changes while I'm adding to these notes -->
-    <meta http-equiv="refresh" content="10">
+    <meta http-equiv="refresh" content="2">
 
     <!-- Sets the page title, used to name the tab, and for Google search listings -->
     <title>Applied Visual Design</title>
@@ -242,7 +242,7 @@
     <main id="main">
 
         <!-- By nesting 3 layers of div elements, we can set CSS properties for each layer separately, to create a card look on the page -->
-        <div id="apple" class="fullCard">
+        <section id="apple" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>Apple</h4>
@@ -255,9 +255,9 @@
                     <a href="https://en.wikipedia.org/wiki/Steve_Wozniak" target="_blank">Steve Wozniak</a>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="google" class="fullCard">
+        <section id="google" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>Google</h4>
@@ -271,9 +271,9 @@
                     <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank">Sergey Brin</a>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="dell" class="fullCard">
+        <section id="dell" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>Dell</h4>
@@ -285,9 +285,9 @@
                     <a href="https://en.wikipedia.org/wiki/Michael_Dell" target="_blank">Michael Dell</a>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="ibm" class="fullCard">
+        <section id="ibm" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>IBM</h4>
@@ -300,9 +300,9 @@
                         Flint</a>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="intel" class="fullCard">
+        <section id="intel" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>Intel</h4>
@@ -315,9 +315,9 @@
                     <a href="https://en.wikipedia.org/wiki/Robert_Noyce" target="_blank">Robert Noyce</a>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="hp" class="fullCard">
+        <section id="hp" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>HP</h4>
@@ -330,9 +330,9 @@
                     <a href="https://en.wikipedia.org/wiki/David_Packard" target="_blank">David Packard</a>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="microsoft" class="fullCard">
+        <section id="microsoft" class="fullCard">
             <div class="cardContent">
                 <div class="cardText">
                     <h4>Microsoft</h4>
@@ -345,7 +345,7 @@
                     <a href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Bill Gates</a>
                 </div>
             </div>
-        </div>
+        </section>
 
     </main>
 
