--- a/responsive-web-design/projects/build-a-survey-form/survey.html
+++ b/responsive-web-design/projects/build-a-survey-form/survey.html
@@ -2,31 +2,61 @@
 <html lang="en">
 
 <head>
+
+    <!-- Refresh the browser to load file changes while I'm adding to these notes -->
+    <meta http-equiv="refresh" content="2">
+
     <meta charset="utf-8">
     <title>Reflection</title>
     <meta name="author" content="Marc LeBlanc">
     <meta name="description" content="Reflection survey">
 
     <style>
+        :root {
+            /* Define colour variables globally, so they're available in any scope on the page */
+            --background-color: grey;
+            --foreground-color: #242627;
+            --text-color: whitesmoke;
+            --input-background-color: ;
+            --input-text-color: ;
+        }
+
         body {
             display: block;
-            background-color: #242627;
-            color: whitesmoke;
+            background-color: var(--background-color);
+        }
+
+        main {
+            background-color: var(--foreground-color);
+            color: var(--text-color);
+            border-radius: 5px;
             font-family: 'Helvetica Neue', sans-serif;
             font-size: large;
-            line-height: 1.4;
-            margin: 100px;
-            padding: 10px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 8px 0px rgba(0, 0, 0, 0.23);
+            padding: 20px;
+            margin: 10px;
+            box-shadow: 5px 5px 20px 20px rgba(0, 0, 0, 0.3);
         }
-        main {
-            background-color: #242627;
+
+        textarea {
+            font-family: 'Helvetica Neue', sans-serif;
+        }
+
+        /* label {
+            margin-bottom: 10px;
+        } */
+
+        .text-input {
+            width: 95%;
+        }
+
+        .non-text-input {
+            width: 25%;
         }
     </style>
 </head>
 
 <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <main id="main">
 
         <h1 id="title">Reflection</h1>
@@ -37,88 +67,84 @@
 
         </p>
 
-        <form id="survey-form">
+        <form id="survey-form" action="/submit">
 
             <!-- Name -->
             <br>
             <label for="name" id="name-label">Name</label>
             <br>
-            <input id="name" name="name" type="text" placeholder="Enter your name" required>
+            <input id="name" name="name" type="text" class="text-input" placeholder="Enter your name" required>
             <br>
 
             <!-- Email -->
             <br>
             <label for="email" id="email-label">Email</label>
             <br>
-            <input id="email" name="email" type="email" placeholder="Enter your email address" required>
+            <input id="email" name="email" type="email" class="text-input" placeholder="Enter your email address"
+                required>
             <br>
 
             <!-- Number -->
             <br>
-            <label for="number" id="number-label">How are you feeling today? (0=Terrible, 5=Terrific)</label>
+            <label for="number" id="number-label">How are you feeling today? ( 0 = Terrible, 5 = Terrific )</label>
             <br>
-            <input id="number" name="number" type="number" placeholder="3" min="0" max="5">
+            <input id="number" name="number" class="non-text-input" type="number" placeholder="3" min="0" max="5">
             <br>
 
             <!-- Dropdown -->
             <br>
             <label for="dropdown" id="dropdown-label">What kind of day was today?</label>
             <br>
-            <select id="dropdown" name="dropdown">
+            <select id="dropdown" name="dropdown" class="non-text-input">
                 <option value="good">Good</option>
                 <option value="okay">Okay</option>
                 <option value="bad">Bad</option>
             </select>
             <br>
+            <br>
+
+            <!-- Checkboxes -->
+            <fieldset>
+                <legend>What contributed to your emotions today?</legend>
+                <input id="checkbox-food" type="checkbox" name="checkbox" value="food">
+                <label for="checkbox-food">Food</label><br>
+                <input id="checkbox-exercise" type="checkbox" name="checkbox" value="exercise">
+                <label for="checkbox-exercise">Exercise</label><br>
+                <input id="checkbox-relationships" type="checkbox" name="checkbox" value="relationships">
+                <label for="checkbox-relationships">Relationships</label><br>
+                <input id="checkbox-weather" type="checkbox" name="checkbox" value="weather">
+                <label for="checkbox-weather">Weather</label><br>
+                <input id="checkbox-hobbies" type="checkbox" name="checkbox" value="hobbies">
+                <label for="checkbox-hobbies">Hobbies</label><br>
+            </fieldset>
 
             <!-- Radio -->
             <br>
-            <p>What kind of day was today?</p>
-            <label for="radio-good">
-                <input id="radio-good" type="radio" name="radio" value="good">Good
-            </label>
-            <br>
-            <label for="radio-okay">
-                <input id="radio-okay" type="radio" name="radio" value="okay">Okay
-            </label>
-            <br>
-            <label for="radio-bad">
-                <input id="radio-bad" type="radio" name="radio" value="bad">Bad
-            </label>
-            <br>
-
-            <!-- Checkboxes "Which emotions are you feeling?" -->
-            <br>
-            <p>What kind of day was today?</p>
-            <label for="checkbox-good">
-                <input id="checkbox-good" type="checkbox" name="checkbox" value="good">Good
-            </label>
-            <br>
-            <label for="checkbox-okay">
-                <input id="checkbox-okay" type="checkbox" name="checkbox" value="okay">Okay
-            </label>
-            <br>
-            <label for="checkbox-bad">
-                <input id="checkbox-bad" type="checkbox" name="checkbox" value="bad">Bad
-            </label>
+            <fieldset>
+                <legend>What contributed the most to your emotions today?</legend>
+                <input id="radio-food" type="radio" name="radio" value="food">
+                <label for="radio-food">Food</label><br>
+                <input id="radio-exercise" type="radio" name="radio" value="exercise">
+                <label for="radio-exercise">Exercise</label><br>
+                <input id="radio-relationships" type="radio" name="radio" value="relationships">
+                <label for="radio-relationships">Relationships</label><br>
+                <input id="radio-weather" type="radio" name="radio" value="weather">
+                <label for="radio-weather">Weather</label><br>
+                <input id="radio-hobbies" type="radio" name="radio" value="hobbies">
+                <label for="radio-hobbies">Hobbies</label><br>
+            </fieldset>
             <br>
 
-            <!-- Text field for additional comments "What was the highlight of your day?" -->
-            <br>
-            <label for="textarea">What were the highlights of your day today?</label>
-            <br>
-            <textarea id="textarea" name="textarea" rows="10" cols="100">
-            </textarea>
+            <!-- Text field -->
+            <label for="textarea">What are the highlights of your day today?</label><br>
+            <textarea id="textarea" name="textarea" class="text-input" rows="10" placeholder="The highlights of my day are..." required></textarea>
             <br>
 
             <p>
                 Thank you for being honest today! It goes a long way towards living a better life.
             </p>
 
-
-            <br>
             <input type="submit" id="submit" value="Submit">
-            <br>
 
         </form>
 
