--- a/responsive-web-design/notes/applied-visual-design.html
+++ b/responsive-web-design/notes/applied-visual-design.html
@@ -5,10 +5,13 @@
 <html lang="en">
 
 <head>
-    <!-- Metadata elements go in the head -->
-
     <!-- Refresh the browser to load file changes while I'm adding to these notes -->
     <!-- <meta http-equiv="refresh" content="2"> -->
+
+    <!-- Metadata elements go in the head -->
+    <meta charset="utf-8">
+    <meta name="author" content="Marc LeBlanc">
+    <meta name="description" content="Notes from Applied Visual Design">
 
     <!-- Sets the page title, used to name the tab, and for Google search listings -->
     <title>Applied Visual Design</title>
