--- a/responsive-web-design/notes/applied-visual-design.html
+++ b/responsive-web-design/notes/applied-visual-design.html
@@ -6,7 +6,7 @@
 
 <head>
     <!-- Refresh the browser to load file changes while I'm adding to these notes -->
-    <!-- <meta http-equiv="refresh" content="2"> -->
+    <meta http-equiv="refresh" content="10">
 
     <!-- Metadata elements go in the head -->
     <meta charset="utf-8">
@@ -76,6 +76,17 @@
         main {
             position: relative;
             margin: 100px 0px 30px 0px;
+            /* 
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto auto auto;
+            gap: 0px 0px; 
+            */
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            /* justify-content: space-around; */
+            flex-wrap: wrap;
         }
 
         main p {
@@ -124,14 +135,20 @@
             width: 100%;
         }
 
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
         .fullCard {
             background-color: var(--text-light, lightgrey);
-            border: 1px solid var(--text-light, green);
+            border: 1px solid var(--text-light, black);
             border-radius: 7px;
             margin: 10px;
             padding: 0px;
             width: 250px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.19), 0 3px 3px rgba(0, 0, 0, 0.23);
+            display: flex;
         }
 
         /*
@@ -241,6 +258,13 @@
             <article> - groups independent, self-contained content, like a blog post
             <section> - groups related content, can be nested within <article> to show chapters, like sections of a blog post
          */
+
+        /* @media (max-width: 1000px) {
+            :root {
+                background-color: black;
+            }
+        } */
+
     </style>
 </head>
 
@@ -365,7 +389,7 @@
                     <p>
                         Microsoft was founded by Bill Gates.
                     </p>
-                    <img src="resources/BillGates.jpg" alt="Bill Gates head shot" width="90%">
+                    <img src="resources/BillGates.jpg" alt="Bill Gates head shot">
                 </div>
                 <div class="cardLinks">
                     <a href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Bill Gates</a>
