Fixed vertical alignment issue

--- a/responsive-web-design/notes/applied-visual-design.html
+++ b/responsive-web-design/notes/applied-visual-design.html
@@ -166,9 +166,6 @@
 
         .cardContent {
             padding: 10px;
-
-            /* margin: auto centers the content in its parent */
-            margin: auto;
         }
 
         .cardLinks {
@@ -368,7 +365,7 @@
                         HP was founded by Bill Hewlett and David Packard.
                     </p>
                     <figure>
-                        <figcaption>Voice to Text</figcaption>
+                        <figcaption>Text to Voice</figcaption>
                         <audio id="hp-audio" controls>
                             <source src="resources/hp-audio.m4a" type="audio/mpeg">
                             <track src="resources/hp-audio-track.vtt" default>
