--- a/responsive-web-design/projects/build-a-technical-documentation-page/documentation.html
+++ b/responsive-web-design/projects/build-a-technical-documentation-page/documentation.html
@@ -4,7 +4,7 @@
 
 <head>
     <!-- Refresh the browser to load file changes while I'm adding to these notes -->
-    <meta http-equiv="refresh" content="2">
+    <!-- <meta http-equiv="refresh" content="2"> -->
 
     <title>Technical Documentation</title>
 
@@ -64,21 +64,21 @@
             /* border: 1px solid; */
         }
 
-        nav li a {
+        nav a {
             text-decoration: none;
         }
 
         main {
             position: relative;
             left: 20%;
-            top: 10px;
             width: 80%;
-            padding: 0px;
+            padding: 10px;
             margin: 0px;
         }
 
         .main-section {
             background-color: var(--card-background);
+            padding: 10px;
             margin: 10px;
         }
 
@@ -94,7 +94,7 @@
 <body>
 
     <!-- Test script -->
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!-- #8: nav with id="navbar" -->
     <nav id="navbar">
@@ -131,6 +131,16 @@
             <code></code>
             <!-- #7: 5+ li elements in the .main-sections -->
             <li></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
 
         <section id="section_two" class="main-section">
@@ -139,6 +149,16 @@
             <p></p>
             <code></code>
             <li></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
 
         <section id="section_three" class="main-section">
@@ -147,6 +167,16 @@
             <p></p>
             <code></code>
             <li></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
 
         <section id="section_four" class="main-section">
@@ -155,6 +185,16 @@
             <p></p>
             <code></code>
             <li></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
 
         <section id="section_five" class="main-section">
@@ -163,6 +203,16 @@
             <p></p>
             <code></code>
             <li></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
 
     </main>
